--- a/compose.yaml
+++ b/compose.yaml
@@ -1,25 +1,36 @@
 
 services:
-###> doctrine/doctrine-bundle ###
-  database:
-    image: postgres:${POSTGRES_VERSION:-16}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    healthcheck:
-      test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB:-app}", "-U", "${POSTGRES_USER:-app}"]
-      timeout: 5s
-      retries: 5
-      start_period: 60s
+  www:
+    build: docker/php
+    container_name: codebyaurore_php
+    ports:
+      - 8080:80
     volumes:
-      - database_data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
+      - ./:/var/www
+      - ./docker/php/vhosts:/etc/apache2/site-enabled
+    networks:
+      - codebyaurore
+###> doctrine/doctrine-bundle ###
+  db:
+    image: mysql
+    container_name: codebyaurore_mysql
+    volumes:
+      - ./var/db_data:/var/lib/mysql
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+    networks:
+      - codebyaurore
+
+  phpmyadmin:
+    image: phpmyadmin
+    container_name: codebyaurore_phpmyadmin
+    ports:
+      - 8780:80
+    networks:
+      - codebyaurore
 
 volumes:
-###> doctrine/doctrine-bundle ###
-  database_data:
-###< doctrine/doctrine-bundle ###
+  db_data:
+
+networks:
+  codebyaurore:
