--- a/.env
+++ b/.env
@@ -16,7 +16,9 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_DEBUG=true
+DATABASE_URL="mysql://user:password@mysql:3306/dbname"
+
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
