set up admin role/access

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,11 +18,22 @@ security:
             form_login:
                 login_path: app_login
                 check_path: app_login
-                enable_csrf: true
+                default_target_path: admin
             logout:
                 path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
+                target: app_login
+            security: true           # Exclure la partie admin
+        admin:
+            pattern: ^/admin
+            provider: app_user_provider
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                default_target_path: admin
+            logout:
+                path: app_logout
+                target: app_login
+            security: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -33,8 +44,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/(blog|about|contact), roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
 when@test:
     security:
