messages stocked in mongodb

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,5 +1,5 @@
 # Utilisation de l'image officielle PHP avec Apache
-FROM php:8.2-apache
+FROM php:8.4-apache
 
 # Configuration Apache
 RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
@@ -8,11 +8,21 @@ RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
 RUN apt-get update \
     && apt-get install -qq -y --no-install-recommends \
     cron \
-    locales coreutils apt-utils git libicu-dev g++ libpng-dev libxml2-dev libzip-dev libonig-dev libxslt-dev;
+    locales \
+    coreutils \
+    apt-utils \
+    git \
+    libicu-dev \
+    g++ \
+    libpng-dev \
+    libxml2-dev \
+    libzip-dev \
+    libonig-dev \
+    libxslt-dev && \
 
 # Configuration de la langue et génération des locales
-RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && \
-    echo "fr_FR.UTF-8 UTF-8" >> /etc/locale.gen && \
+echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && \
+echo "fr_FR.UTF-8 UTF-8" >> /etc/locale.gen && \
     locale-gen
 
 # Installation de Composer
@@ -20,8 +30,11 @@ RUN curl -sSk https://getcomposer.org/installer | php -- --disable-tls && \
    mv composer.phar /usr/local/bin/composer
 
 # Installation des extensions PHP
-RUN docker-php-ext-configure intl
-RUN docker-php-ext-install pdo pdo_mysql mysqli gd opcache intl zip calendar dom mbstring zip gd xsl && a2enmod rewrite
+RUN docker-php-ext-configure intl && \
+    docker-php-ext-install pdo pdo_mysql mysqli gd opcache intl zip calendar dom mbstring xsl && \
+    a2enmod rewrite
+
+# Installation de APCu et autres extensions via pecl
 RUN pecl install apcu && docker-php-ext-enable apcu
 
 # Installation de php-extension-installer pour des extensions supplémentaires
@@ -29,12 +42,16 @@ ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/do
 RUN chmod +x /usr/local/bin/install-php-extensions && sync && \
     install-php-extensions amqp
 
+# Ajout du fichier vhost.conf dans le conteneur et activation du VirtualHost
+COPY vhosts/vhost.conf /etc/apache2/sites-available/000-default.conf
+
+# Activation des sites et modules Apache nécessaires
+RUN a2ensite 000-default.conf && \
+    a2enmod rewrite
+
+RUN pecl install mongodb && docker-php-ext-enable mongodb
+
 # Définition du répertoire de travail
 WORKDIR /var/www/html
 
-# Copie des fichiers du projet dans le conteneur
-# COPY . /var/www
-
-# Attribution des permissions correctes
-# RUN chown -R root:root /var/www
 
