--- a/config/packages/doctrine_mongodb.yaml
+++ b/config/packages/doctrine_mongodb.yaml
@@ -1,17 +1,18 @@
 doctrine_mongodb:
-    connections:
-        default:
-            server: '%env(resolve:MONGODB_URL)%'
-            options: {}
-
-    default_database: codebyaurore # ou autre nom que tu veux
-
-    document_managers:
-        default:
-            mappings:
-                App:
-                    type: attribute
-                    dir: '%kernel.project_dir%/src/Document'
-                    prefix: 'App\Document'
-                    is_bundle: false
-
+  auto_generate_proxy_classes: true
+  auto_generate_hydrator_classes: true
+  connections:
+    default:
+      server: "%env(resolve:MONGODB_URL)%"
+  default_database: "%env(resolve:MONGODB_DB)%"
+  document_managers:
+    default:
+      auto_mapping: true
+      mappings:
+        App:
+          dir: "%kernel.project_dir%/src/Document"
+          mapping: true
+          type: attribute
+          prefix: 'App\Document'
+          is_bundle: false
+          alias: App
