--- a/docker/php/vhosts/vhost.conf
+++ b/docker/php/vhosts/vhost.conf
@@ -7,11 +7,13 @@
 	<Directory /var/www/html/public>
 		AllowOverride None
 		Order Allow,Deny
-		Allow from All
+        Allow from All
 
+		 # pour gérer les erreurs et le fallback
 		FallbackResource /index.php
 	</Directory>
 
+	# Configuration des logs
 	ErrorLog /var/log/apache2/project_error.log
 	CustomLog /var/log/apache2/project_access.log combined
 </VirtualHost>
