--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/mongodb-odm-bundle": "^5.3",
         "doctrine/orm": "^3.3",
-        "mongodb/mongodb": "^1.20",
+        "mongodb/mongodb": "^1.21",
         "phpdocumentor/reflection-docblock": "^5.6",
+        "phpmailer/phpmailer": "^6.9",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "7.2.*",
         "symfony/asset-mapper": "7.2.*",
