--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
+  "name": "codebyaurore",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "./node_modules/.bin/encore dev",
+    "build": "./node_modules/.bin/encore production",
+    "watch": "./node_modules/.bin/encore dev --watch",
+    "dev-server": "./node_modules/.bin/encore dev-server"
+  },
   "devDependencies": {
+    "@symfony/webpack-encore": "^5.1.0",
     "sass": "^1.86.1",
-    "sass-loader": "^16.0.5"
+    "sass-loader": "^16.0.5",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^5.0.0"
+  },
+  "dependencies": {
+    "@symfony/stimulus-bundle": "^2.24.0",
+    "core-js": "^3.41.0",
+    "flatpickr": "^4.6.13"
   }
 }
