--- a/config/packages/doctrine_mongodb.yaml
+++ b/config/packages/doctrine_mongodb.yaml
@@ -1,10 +1,14 @@
 doctrine_mongodb:
   auto_generate_proxy_classes: true
   auto_generate_hydrator_classes: true
+  proxy_dir: '%kernel.cache_dir%/doctrine/odm/mongodb/Proxies' # optionnel mais souvent utile
+  hydrator_dir: '%kernel.cache_dir%/doctrine/odm/mongodb/Hydrators'
+  default_database: "%env(resolve:MONGODB_DB)%"
+  
   connections:
     default:
       server: "%env(resolve:MONGODB_URL)%"
-  default_database: "%env(resolve:MONGODB_DB)%"
+
   document_managers:
     default:
       auto_mapping: true
@@ -16,3 +20,4 @@ doctrine_mongodb:
           prefix: 'App\Document'
           is_bundle: false
           alias: App
+    
