--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@symfony/webpack-encore": "^5.1.0",
+    "postcss-loader": "^8.1.1",
     "sass": "^1.86.3",
     "sass-loader": "^16.0.5",
     "webpack": "^5.99.5",
