permissions issue + mongodb version issue - solved

--- a/.env
+++ b/.env
@@ -15,8 +15,24 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_DEBUG=true
+APP_ENV=prod
+APP_DEBUG=0
+
+DATABASE_URL="mysql://aurore-admin:pdEE6tpV66N04lrukv4En5cJEKkyXIx9bjQVkhdvUxM=@codebyaurore_mysql:3306/codebyaurore"
+
+MYSQL_DATABASE=codebyaurore
+MYSQL_USER=aurore-admin
+MYSQL_PASSWORD="pdEE6tpV66N04lrukv4En5cJEKkyXIx9bjQVkhdvUxM="
+
+MONGODB_URL=mongodb://codebyaurore_mongodb:27017
+MONGODB_DB=codebyaurore
+
+UID=1000
+GID=1000
+
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAILER_DSN=smtp://3d0ab9a0656869:bd68df9f15519d@sandbox.smtp.mailtrap.io:2525
+
 
 
 ###< symfony/framework-bundle ###
