--- a/docker/php/vhosts/vhost.conf
+++ b/docker/php/vhosts/vhost.conf
@@ -1,19 +1,21 @@
-<VirtualHost *:80>
+<VirtualHost *:8080>
 	ServerName localhost
 
 	DocumentRoot /var/www/html/public
-	DirectoryIndex /index.php
+	DirectoryIndex index.php
 
 	<Directory /var/www/html/public>
-		AllowOverride None
-		Order Allow,Deny
-        Allow from All
+		AllowOverride All
+		Require all granted
 
-		 # pour gérer les erreurs et le fallback
-		FallbackResource /index.php
+		<IfModule mod_rewrite.c>
+			RewriteEngine On
+			RewriteCond %{REQUEST_FILENAME} !-f
+			RewriteCond %{REQUEST_FILENAME} !-d
+			RewriteRule ^ index.php [QSA,L]
+		</IfModule>
 	</Directory>
 
-	# Configuration des logs
 	ErrorLog /var/log/apache2/project_error.log
 	CustomLog /var/log/apache2/project_access.log combined
 </VirtualHost>
