phpunit contact form first try

--- a/.env
+++ b/.env
@@ -31,8 +31,8 @@ UID=1000
 GID=1000
 
 # Looking to send emails in production? Check out our Email API/SMTP product!
-MAILER_DSN="smtp://b99af6de5f4766:069e287dc83a62@sandbox.smtp.mailtrap.io:2525"
-
+#MAILER_DSN="smtp://b99af6de5f4766:069e287dc83a62@sandbox.smtp.mailtrap.io:2525"
+MAILER_DSN=test://default
 
 
 ###< symfony/framework-bundle ###
