--- a/config/packages/routing.yaml
+++ b/config/packages/routing.yaml
@@ -2,7 +2,14 @@ framework:
     router:
         # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
         # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
-        #default_uri: http://localhost
+        default_uri: http://localhost:8080
+
+when@dev:
+    parameters:
+        env(SYMFONY_PROJECT_DEFAULT_ROUTE_URL): 'http://localhost:8080'
+    framework:
+        router:
+            default_uri: '%env(SYMFONY_PROJECT_DEFAULT_ROUTE_URL)%'
 
 when@prod:
     framework:
