--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_DEBUG=0
 
 DATABASE_URL="mysql://aurore-admin:pdEE6tpV66N04lrukv4En5cJEKkyXIx9bjQVkhdvUxM=@codebyaurore_mysql:3306/codebyaurore"
@@ -31,8 +31,8 @@ UID=1000
 GID=1000
 
 # Looking to send emails in production? Check out our Email API/SMTP product!
-MAILER_DSN="smtp://b99af6de5f4766:069e287dc83a62@sandbox.smtp.mailtrap.io:2525"
-#MAILER_DSN=test://default
+#MAILER_DSN="smtp://b99af6de5f4766:069e287dc83a62@sandbox.smtp.mailtrap.io:2525"
+MAILER_DSN=null://null
 
 
 ###< symfony/framework-bundle ###
