--- a/.env
+++ b/.env
@@ -30,10 +30,11 @@ MONGODB_DB=codebyaurore
 UID=1000
 GID=1000
 
+ADMIN_USERS=alp
+
 # Looking to send emails in production? Check out our Email API/SMTP product!
 MAILER_DSN="smtp://b99af6de5f4766:069e287dc83a62@sandbox.smtp.mailtrap.io:2525"
 #MAILER_DSN=test://default
-
 
 ###< symfony/framework-bundle ###
 
