setup rate-limiter for login attempts

--- a/.env
+++ b/.env
@@ -59,3 +59,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=1
 # Looking to send emails in production? Check out our Email API/SMTP product!
 
 ###< symfony/mailer ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
