--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,4 +20,14 @@ services:
         arguments:
             $mailer: '@mailer'
             $twig: '@twig'
-    # please note that last definitions always *replace* previous ones
+    App\Controller\SecurityController:
+        arguments:
+            $loginRateLimiter: '@login.limiter'
+    login.limiter:
+        alias: 'limiter.login'
+    limiter.storage.cache_app:
+        class: Symfony\Component\RateLimiter\Storage\CacheStorage
+        arguments:
+            - '@cache.app'
+
+    Symfony\Component\RateLimiter\Storage\StorageInterface: '@limiter.storage.cache_app'
