--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/mongodb-odm-bundle": "^5.3",
         "doctrine/orm": "^3.3.3",
         "mongodb/mongodb": "^1.21.1",
+        "nelmio/security-bundle": "^3.5",
         "phpdocumentor/reflection-docblock": "^5.6.2",
         "phpmailer/phpmailer": "^6.10",
         "phpstan/phpdoc-parser": "^2.1",
