--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -18,6 +18,7 @@ framework:
         cookie_lifetime: 3600   # 1 heure
         cookie_secure: auto     # Sécurisation du cookie selon l'environnement
         cookie_httponly: true   # Empêche l'accès aux cookies depuis JavaScript
+        cookie_samesite: 'lax'
 
 
     #esi: true
