--- a/compose.yaml
+++ b/compose.yaml
@@ -5,10 +5,13 @@ services:
       dockerfile: Dockerfile
     container_name: codebyaurore_php
     restart: always
+    environment:
+      - APP_ENV=prod
     ports:
       - 8080:8080
     volumes:
-      - ./:/var/www/html
+      - ./src:/var/www/html/src
+      - ./public:/var/www/html/public
       - ./docker/php/vhosts:/etc/apache2/sites-enabled
     env_file:
       - .env.local
@@ -17,18 +20,18 @@ services:
       - mysql
     networks:
       - codebyaurore
-    # user: "33:33" à décommenter en production
 
   mysql:
     image: mysql
     container_name: codebyaurore_mysql
     restart: always
     environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ./var/db_data:/var/lib/mysql
     networks:
       - codebyaurore
     env_file:
@@ -46,4 +49,3 @@ networks:
   codebyaurore:
 volumes:
   mongo_data:
-  mysql_data:
