--- a/compose.yaml
+++ b/compose.yaml
@@ -35,7 +35,7 @@ services:
     networks:
       - codebyaurore
     env_file:
-      - .env.local
+      - .env
 
   mongodb:
     image: mongo:6.0
