--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,10 +19,11 @@ security:
                 login_path: app_login
                 check_path: app_login
                 default_target_path: admin.dashboard
+                remember_me: true
             logout:
                 path: app_logout
                 target: app_login
-            security: true           # Exclure la partie admin
+            security: true           
         admin:
             pattern: ^/admin
             provider: app_user_provider
