--- a/compose.yaml
+++ b/compose.yaml
@@ -5,8 +5,6 @@ services:
       dockerfile: Dockerfile
     container_name: codebyaurore_php
     restart: always
-    environment:
-      - APP_ENV=prod
     env_file:
       - .env.prod
     ports:
@@ -40,8 +38,19 @@ services:
     image: mongo:6.0
     restart: always
     container_name: codebyaurore_mongodb
+    command:
+      - mongod
+      - --auth
+      - --tlsMode=requireTLS
+      - --tlsCertificateKeyFile=/etc/ssl/mongodb.pem
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PASSWORD}
     volumes:
+      - ./certs/mongodb.pem:/etc/ssl/mongodb.pem:ro
       - mongo_data:/data/db
+    ports:
+      - "27017:27017"
     networks:
       - codebyaurore
 
