--- a/compose.yaml
+++ b/compose.yaml
@@ -8,14 +8,13 @@ services:
     environment:
       - APP_ENV=prod
     env_file:
-      - .env.prod
+      - .env
     ports:
       - 8080:8080
     volumes:
       - ./src:/var/www/html/src
       - ./public:/var/www/html/public
       - ./docker/php/vhosts:/etc/apache2/sites-enabled
-      - ./.env.prod:/var/www/html/.env
     depends_on:
       - mongodb
       - mysql
