--- a/compose.yaml
+++ b/compose.yaml
@@ -38,6 +38,8 @@ services:
     image: mongo:6.0
     restart: always
     container_name: codebyaurore_mongodb
+    ports:
+    - 27017:27017 
     volumes:
       - mongo_data:/data/db
     networks:
